--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -104,10 +104,20 @@ en:
       user_notfound: "User not found!"
       updated: "Profile updated"
       errorlogin: "Please log in."
-      deleted_success: "User deleted"
-      deleted_unsuccess: "The user not delete"
+      deletedsuccess: "User deleted"
+      checkemail: "Please check your email to activate your account."
     sessions_controller:
       danger: "Invalid email/password combination"
+      notactivated: "Account not activated. Check your email for the activation link."
+    account_activations_controller:
+      activated: "Account activated!"
+      notactivated: "Invalid activation link"
   shared:
     _error_messages:
       formcontains: "The form contains"
+  user_mailer:
+    account_activation:
+      samapp: "Sample App"
+      hi: "Hi"
+      content: "Welcome to the Sample App! Click on the link below to activate your account:"
+      activate: "Activate"
